--- a/webempresa/core/templates/core/index.html
+++ b/webempresa/core/templates/core/index.html
@@ -10,6 +10,8 @@
 
     <title>Inicio | La Caffettiera</title>
 
+    {% load static %}
+
     <!-- Bootstrap -->
     <link href="{% static 'core/vendor/bootstrap/css/bootstrap.min.css'%}" rel="stylesheet">
 
@@ -66,7 +68,7 @@
     <section class="page-section clearfix">
       <div class="container">
         <div class="intro">
-          <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro.jpg" alt="">
+          <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{% static 'core/img/intro.jpg' %}" alt="">
           <div class="intro-text left-0 text-center bg-faded p-5 rounded">
             <h2 class="section-heading mb-4">
               <span class="section-heading-upper">Déjate sorprender</span>
