--- a/webempresa/core/templates/core/base.html
+++ b/webempresa/core/templates/core/base.html
@@ -40,29 +40,35 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav mx-auto">
-                <li class="nav-item px-lg-4">
+                <li class="nav-item px-lg-4
+                {% if request.path == '/' %}active{% endif %}">
                     <a class="nav-link text-uppercase text-expanded"
-            href="{% url 'index' %}">Inicio</a>
+                href="{% url 'index' %}">Inicio</a>
                 </li>
-                <li class="nav-item px-lg-4">
+                <li class="nav-item px-lg-4
+                {% if request.path == '/about/' %}active{% endif %}">
                     <a class="nav-link text-uppercase text-expanded"
-            href="{% url 'about' %}">Historia</a>
+                href="{% url 'about' %}">Historia</a>
                 </li>
-                <li class="nav-item px-lg-4">
+                <li class="nav-item px-lg-4
+                {% if request.path == '/services/' %}active{% endif %}">
                     <a class="nav-link text-uppercase text-expanded"
-            href="{% url 'services' %}">Servicios</a>
+                href="{% url 'services' %}">Servicios</a>
                 </li>
-                <li class="nav-item px-lg-4">
+                <li class="nav-item px-lg-4
+                {% if request.path == '/store/' %}active{% endif %}">
                     <a class="nav-link text-uppercase text-expanded"
-            href="{% url 'store' %}">Visítanos</a>
+                href="{% url 'store' %}">Visítanos</a>
                 </li>
-                <li class="nav-item px-lg-4">
+                <li class="nav-item px-lg-4
+                {% if request.path == '/contact/' %}active{% endif %}">
                     <a class="nav-link text-uppercase text-expanded"
-            href="{% url 'contact' %}">Contacto</a>
+                href="{% url 'contact' %}">Contacto</a>
                 </li>
-                <li class="nav-item px-lg-4">
+                <li class="nav-item px-lg-4
+                {% if request.path == '/blog/' %}active{% endif %}">
                     <a class="nav-link text-uppercase text-expanded"
-            href="{% url 'blog' %}">Blog</a>
+                href="{% url 'blog' %}">Blog</a>
                 </li>
             </ul>
         </div>
