--- a/webempresa/services/templates/services/services.html
+++ b/webempresa/services/templates/services/services.html
@@ -2,27 +2,36 @@
 
 {% load static %}
 
-{% block title %}Servicios | La Caffettiera{% endblock %}
+{% block title %}Servicios{% endblock %}
 
 {% block content %}
-<section class="page-section">
+{% for service in services reversed %}
+  <section class="page-section">
   <div class="container">
     <div class="product-item">
-      <div class="product-item-title d-flex">
-        <div class="bg-faded p-5 d-flex mr-auto rounded">
-          <h2 class="section-heading mb-0">
-            <span class="section-heading-upper">La mezcla perfecta</span>
-            <span class="section-heading-lower">Cafés y tés</span>
-          </h2>
-        </div>
-      </div>
-      <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="{% static 'core/img/products-01.jpg' %}" alt="">
-      <div class="product-item-description d-flex ml-auto">
-        <div class="bg-faded p-5 rounded">
-          <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-        </div>
+    <div class="product-item-title d-flex">
+      <div class="bg-faded p-5 d-flex mr-auto rounded">
+        <h2 class="section-heading mb-0">
+          <span class="section-heading-upper">
+            {{service.subtitle}}
+          </span>
+          <span class="section-heading-lower">
+            {{service.title}}
+          </span>
+        </h2>
       </div>
     </div>
-  </div>
-</section>
+    <img class="product-item-img mx-auto d-flex rounded img-fluid
+mb-3"
+        src="{{service.image.url}}" alt="">
+    <div class="product-item-description d-flex ml-auto">
+      <div class="bg-faded p-5 rounded">
+        <p class="mb-0">{{service.content}}</p>
+      </div>
+    </div>
+    </div>
+</div>
+  </section>
+{% endfor %}
+
 {% endblock %}
