--- a/webempresa/services/templates/services/services.html
+++ b/webempresa/services/templates/services/services.html
@@ -5,6 +5,7 @@
 {% block title %}Servicios{% endblock %}
 
 {% block content %}
+<img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="{% static 'media/services/cafete1.jpg' %}" alt="Imagen de servicios">
 {% for service in services reversed %}
   <section class="page-section">
   <div class="container">
