--- a/webempresa/services/templates/services/services.html
+++ b/webempresa/services/templates/services/services.html
@@ -1,38 +1,42 @@
 {% extends 'core/base.html' %}
-
 {% load static %}
-
 {% block title %}Servicios{% endblock %}
-
 {% block content %}
-<img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="{% static 'media/services/cafete1.jpg' %}" alt="Imagen de servicios">
+
+<!-- Imagen introductoria -->
+<section class="page-section about-heading">
+  <div class="container">
+    <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="{% static 'core/img/cafete1.jpg' %}" alt="Cafés y tés">
+  </div>
+</section>
+
+<!-- Listado de servicios -->
 {% for service in services reversed %}
-  <section class="page-section">
+<section class="page-section">
   <div class="container">
     <div class="product-item">
-    <div class="product-item-title d-flex">
-      <div class="bg-faded p-5 d-flex mr-auto rounded">
-        <h2 class="section-heading mb-0">
-          <span class="section-heading-upper">
-            {{service.subtitle}}
-          </span>
-          <span class="section-heading-lower">
-            {{service.title}}
-          </span>
-        </h2>
+      <div class="product-item-title d-flex">
+        <div class="bg-faded p-5 d-flex mr-auto rounded">
+          <h2 class="section-heading mb-0">
+            <span class="section-heading-upper">
+              {{ service.subtitle }}
+            </span>
+            <span class="section-heading-lower">
+              {{ service.title }}
+            </span>
+          </h2>
+        </div>
+      </div>
+      <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3"
+           src="{{ service.image.url }}" alt="{{ service.title }}">
+      <div class="product-item-description d-flex ml-auto">
+        <div class="bg-faded p-5 rounded">
+          <p class="mb-0">{{ service.content }}</p>
+        </div>
       </div>
     </div>
-    <img class="product-item-img mx-auto d-flex rounded img-fluid
-mb-3"
-        src="{{service.image.url}}" alt="">
-    <div class="product-item-description d-flex ml-auto">
-      <div class="bg-faded p-5 rounded">
-        <p class="mb-0">{{service.content}}</p>
-      </div>
-    </div>
-    </div>
-</div>
-  </section>
+  </div>
+</section>
 {% endfor %}
 
 {% endblock %}
