--- a/webempresa/blog/templates/blog/blog.html
+++ b/webempresa/blog/templates/blog/blog.html
@@ -18,14 +18,13 @@
                             {{post.title}}</span>
                     </h2>
                     <p class="mb-0">
-                        <img class="mx-auto d-flex img-fluid mb-3 mblg-0"
-                            src="{{post.image.url}}" alt="">
+                        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3"
+           src="{{ post.image.url }}" alt="{{ post.title }}">
                     </p>
                     <p class="mb-0 mbt">{{post.content}}</p>
                     <p class="mb-0 mbt">
                         <span class="section-heading-under">
-                            Publicado por
-<em><b>{{post.author}}</b></em>
+                            Publicado por<em><b>{{post.author}}</b></em>
                             en <em> </em>
                         </span>
                     </p>
