--- a/webempresa/blog/templates/blog/blog.html
+++ b/webempresa/blog/templates/blog/blog.html
@@ -13,7 +13,7 @@
                     <div class="cta-innerv text-center rounded">
                     <h2 class="section-heading mb-5">
                         <span class="section-heading-upper">
-                            {{post.published}}</span>
+                            {{post.published|date:"SHORT_DATE_FORMAT"}}</span>
                         <span class="section-heading-lower">
                             {{post.title}}</span>
                     </h2>
@@ -21,11 +21,11 @@
                         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3"
            src="{{ post.image.url }}" alt="{{ post.title }}">
                     </p>
-                    <p class="mb-0 mbt">{{post.content}}</p>
+                    <p class="mb-0 mbt">{{post.content|linebreaks}}</p>
                     <p class="mb-0 mbt">
                         <span class="section-heading-under">
-                            Publicado por<em><b>{{post.author}}</b></em>
-                            en <em> </em>
+                            Publicado por <em><b>{{post.author}}</b></em>
+                            en <em>{{post.categories.all|join:", "}}</em>
                         </span>
                     </p>
                     </div>
