--- a/webempresa/blog/templates/blog/category.html
+++ b/webempresa/blog/templates/blog/category.html
@@ -5,7 +5,7 @@
 {% block title %}{{category}}{% endblock %}
 
 {% block content %}
-    {% for post in category.posts_set.all %}
+    {% for post in category.get_posts.all %}
     <section class="page-section cta">
         <div class="container">
             <div class="row">
