--- a/webempresa/blog/templates/blog/blog.html
+++ b/webempresa/blog/templates/blog/blog.html
@@ -25,7 +25,13 @@
                     <p class="mb-0 mbt">
                         <span class="section-heading-under">
                             Publicado por <em><b>{{post.author}}</b></em>
-                            en <em>{{post.categories.all|join:", "}}</em>
+                            en 
+                            {% for category in post.categories.all %}
+                                <a href="{% url 'category' category.id %}" class="link">
+                        {{category.name}}</a>
+                        
+                        {% endfor %}
+                       
                         </span>
                     </p>
                     </div>
