--- a/webempresa/core/templates/core/base.html
+++ b/webempresa/core/templates/core/base.html
@@ -65,10 +65,10 @@
                     <a class="nav-link text-uppercase text-expanded"
                 href="{% url 'contact' %}">Contacto</a>
                 </li>
-                <li class="nav-item px-lg-4
-                {% if request.path == '/blog/' %}active{% endif %}">
-                    <a class="nav-link text-uppercase text-expanded"
-                href="{% url 'blog' %}">Blog</a>
+                <li class="nav-item px-lg-4 
+                {% if request.path|slice:":6" == '/blog/' %}active{% endif %}">
+                <a class="nav-link text-uppercase text-expanded"
+                  href="{% url 'blog' %}">Blog</a>
                 </li>
             </ul>
         </div>
