--- a/webempresa/core/templates/core/base.html
+++ b/webempresa/core/templates/core/base.html
@@ -82,6 +82,8 @@
     <!-- Pié de página -->
     <footer class="footer text-faded text-center py-5">
       <div class="container">
+        {{test}}
+      <div class="container">
         <p class="m-0">
 	        <a href="#" class="link">
 	          <span class="fa-stack fa-lg">
@@ -108,6 +110,7 @@
         	<a href="sample.html" class="link">Cookies</a>
 		</p>
         <p class="m-0 mbt1">&copy; La Caffettiera 2018</p>
+      </div>
       </div>
 	</footer>
 
