--- a/webempresa/core/templates/core/base.html
+++ b/webempresa/core/templates/core/base.html
@@ -2,7 +2,14 @@
 <html lang="es">
 
 <head>
-    {% load static %}
+    {% load pages_extras %}
+    {% get_page_list as page_list %}
+    {% for page in page_list %}
+        <a href="{% url 'page' page.id page.title|slugify %}"
+    class="link">
+            {{page.title}}</a> {% if not forloop.last %}·{% endif %}
+{% endfor %}
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
