--- a/webempresa/core/templates/core/base.html
+++ b/webempresa/core/templates/core/base.html
@@ -2,6 +2,7 @@
 <html lang="es">
 
 <head>
+    {% load static %}
     {% load pages_extras %}
     {% get_page_list as page_list %}
     {% for page in page_list %}
