cambios en contact.html

--- a/webempresa/contact/templates/contact/contact.html
+++ b/webempresa/contact/templates/contact/contact.html
@@ -17,36 +17,32 @@
               <span class="section-heading-lower">Contacto</span>
             </h2>
             <!-- Formulario de contacto -->
-            <form>
-              <div class="form-group">
-                <label>Nombre *</label>
-                <div class="input-group">
-                  <input type="text" class="form-control">
-                </div>
-              </div>
-              <div class="form-group">
-                <label>Email *</label>
-                <div class="input-group">
-                  <input type="text" class="form-control">
-                </div>
-                <ul class="errorlist">
-                  <li>El email no es correcto.</li>
-                </ul>
-              </div>
-              <div class="form-group">
-                <label>Mensaje *</label>
-                <div class="input-group">
-                  <textarea class="form-control"></textarea>
-                </div>
-              </div>
-              <div class="text-center">
-                <input type="submit" class="btn btn-primary btn-block py-2" value="Enviar">
-              </div>
-            </form>
-          </div>
+          
+{% if 'ok' in request.GET %}
+  <p>Su mensaje se ha enviado correctamente, en breve nos pondremos en contacto.</p>
+{% endif %}
+<form action="" method="POST">
+  {% csrf_token %}
+  <div class="form-group">
+    <label>Nombre *</label>
+    <div class="input-group">{{ form.name }}</div>
+    {{ form.name.errors }}
         </div>
-      </div>
+        <div class="form-group">
+            <label>Email *</label>
+            <div class="input-group">{{ form.email }}</div>
+            {{ form.email.errors }}
+        </div>
+        <div class="form-group">
+          <label>Mensaje *</label>
+          <div class="input-group">{{ form.content }}</div>
+          {{ form.content.errors }}
     </div>
-  </div>
+    <div class="text-center">
+      <input type="submit" class="btn btn-primary btn-block py-2" value="Enviar">
+    </div>
+</form>
+<!-- Fin formulario de contacto -->
+
 </section>
 {% endblock %}
