--- a/webempresa/core/templates/core/base.html
+++ b/webempresa/core/templates/core/base.html
@@ -96,14 +96,13 @@
 
             <!-- Enlaces de las páginas -->
             <p class="m-0 mbt">
-                {% get_page_list as page_list %}
-                {% for page in page_list %}
-                <a href="{% url 'page' page.id page.slug %}" class="link">
-                    {{ page.title }}
-                </a>
-                
-                    {% if not forloop.last %}·{% endif %}
-                {% endfor %}
+                {% load pages_extras %} 
+                {% get_page_list as page_list %} 
+                {% for page in page_list %} 
+                    <a href="{% url 'page' page.id page.title|slugify %}" 
+                class="link"> 
+                {{page.title}}</a> {% if not forloop.last %}·{% endif %}  
+                {% endfor %} 
             </p>
 
 
