--- a/webempresa/core/templates/core/base.html
+++ b/webempresa/core/templates/core/base.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
     <!-- Estilos -->
-    <link href="{% static 'core/css/business-casual.css' %}" rel="stylesheet">
+    <link href="{% static 'core/css/business-casual.css' %}?v=2" rel="stylesheet">
 </head>
 
 <body>
