--- a/webempresa/core/templates/core/index.html
+++ b/webempresa/core/templates/core/index.html
@@ -9,14 +9,13 @@
     <section class="page-section clearfix">
       <div class="container">
         <div class="intro">
-          <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{% static 'core/img/intro.jpg' %}" alt="">
+          <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="{% static 'core/img/intro1.jpg' %}" alt="">
           <div class="intro-text left-0 text-center bg-faded p-5 rounded">
             <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">Déjate sorprender</span>
-              <span class="section-heading-lower">Te gustará</span>
+              <span class="section-heading-upper">Ven a divertirte</span>
+              <span class="section-heading-lower">Te encantará</span>
             </h2>
-            <p class="mb-3">Trabajamos sólo con los mejores ingredientes. Una vez lo pruebes, nuestro café será la mejor forma de empezar tu rutina diaria.
-            </p>
+            <p class="mb-3">En Tesis, cada noche se convierte en una experiencia inolvidable. Descubre el mejor ambiente, música en vivo y una selección exclusiva de bebidas que harán vibrar tus sentidos. Somos el epicentro de las noches en Villanueva de la Cañada, donde cada visita es el comienzo de una gran historia
             <div class="intro-button mx-auto">
               <a class="btn btn-primary btn-xl" href="store.html">Visítanos</a>
             </div>
@@ -32,10 +31,10 @@
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Compromiso total</span>
+                <span class="section-heading-upper">Compromiso total con la diversión</span>
                 <span class="section-heading-lower">Garantizado</span>
               </h2>
-              <p class="mb-0">Sed pulvinar blandit elit id venenatis. Ut eget lacus neque. Nullam justo quam, efficitur nec turpis vitae, efficitur posuere ligula. Proin ut turpis orci. Aenean porta sodales lectus faucibus pellentesque. In sed felis iaculis, rhoncus felis a, maximus mi.</p>
+              <p class="mb-0">Donde la noche cobra vida. Música, luces y diversión como nunca antes.</p>
             </div>
           </div>
         </div>
