--- a/webempresa/core/templates/core/index.html
+++ b/webempresa/core/templates/core/index.html
@@ -15,7 +15,7 @@
               <span class="section-heading-upper">Ven a divertirte</span>
               <span class="section-heading-lower">Te encantará</span>
             </h2>
-            <p class="mb-3">En Tesis, cada noche se convierte en una experiencia inolvidable. Descubre el mejor ambiente, música en vivo y una selección exclusiva de bebidas que harán vibrar tus sentidos. Somos el epicentro de las noches en Villanueva de la Cañada, donde cada visita es el comienzo de una gran historia
+            <p class="mb-3">En Tesis, cada noche se convierte en una experiencia inolvidable. Descubre el mejor ambiente, música en vivo y una selección exclusiva de bebidas que harán vibrar tus sentidos. Somos el epicentro de las noches en Villanueva de la Cañada, donde cada visita es el comienzo de una gran historia.</p>
             <div class="intro-button mx-auto">
               <a class="btn btn-primary btn-xl" href="store.html">Visítanos</a>
             </div>
@@ -24,21 +24,5 @@
       </div>
     </section>
 
-    <!-- Mensaje -->
-    <section class="page-section cta">
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-9 mx-auto">
-            <div class="cta-inner text-center rounded">
-              <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Compromiso total con la diversión</span>
-                <span class="section-heading-lower">Garantizado</span>
-              </h2>
-              <p class="mb-0">Donde la noche cobra vida. Música, luces y diversión como nunca antes.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
+  
     {% endblock %}
