cambiando el nombre a tesis

--- a/webempresa/core/templates/core/about.html
+++ b/webempresa/core/templates/core/about.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Historia | La Caffettiera{% endblock %}
+{% block title %}Historia | Tesis{% endblock %}
 
 {% block content %}
 <section class="page-section about-heading">
