--- a/webempresa/core/templates/core/index.html
+++ b/webempresa/core/templates/core/index.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Inicio | La Caffettiera{% endblock %}
+{% block title %}Inicio | Tesis{% endblock %}
 
 {% block content %}
     <!-- Cabecera -->
