--- a/webempresa/contact/templates/contact/contact.html
+++ b/webempresa/contact/templates/contact/contact.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Contacto | La Caffettiera{% endblock %}
+{% block title %}Contacto | Tesis{% endblock %}
 
 {% block content %}
 <section class="page-section about-heading">
