--- a/webempresa/core/templates/core/base.html
+++ b/webempresa/core/templates/core/base.html
@@ -45,7 +45,7 @@
                         <a class="nav-link text-uppercase text-expanded" href="{% url 'about' %}">Historia</a>
                     </li>
                     <li class="nav-item px-lg-4 {% if request.path == '/services/' %}active{% endif %}">
-                        <a class="nav-link text-uppercase text-expanded" href="{% url 'services' %}">Servicios</a>
+                        <a class="nav-link text-uppercase text-expanded" href="{% url 'services' %}">Eventos</a>
                     </li>
                     <li class="nav-item px-lg-4 {% if request.path == '/store/' %}active{% endif %}">
                         <a class="nav-link text-uppercase text-expanded" href="{% url 'store' %}">Visítanos</a>
