cambiado el visitanos

--- a/webempresa/core/templates/core/store.html
+++ b/webempresa/core/templates/core/store.html
@@ -16,27 +16,27 @@
           </h2>
           <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
             <li class="list-unstyled-item list-hours-item d-flex">
-              Lunes a viernes
-              <span class="ml-auto">7:00 a 20:00</span>
+              Lunes a jueves
+              <span class="ml-auto">Cerrado</span>
             </li>
             <li class="list-unstyled-item list-hours-item d-flex">
-              Sábados
-              <span class="ml-auto">9:00 a 17:00</span>
+              Viernes y Sábados
+              <span class="ml-auto">00:00 a 7:00</span>
             </li>
             <li class="list-unstyled-item list-hours-item d-flex">
               Domingos
-              <span class="ml-auto">Cerrado</span>
+              <span class="ml-auto">22:00 a 03:00</span>
             </li>
           </ul>
           <p class="address mb-5">
             <em>
-              <strong>Avd. Infusiones nº 127</strong>
-              <br>Barcelona
+              <strong>Calle Real 79</strong>
+              <br>Villanueva de la Cañada, Madrid
             </em>
           </p>
           <p class="mb-0">
             <small><em>Llámanos y pregunta</em></small>
-            <br>(317) 585-8468
+            <br>712946464
           </p>
         </div>
       </div>
