--- a/webempresa/contact/templates/contact/contact.html
+++ b/webempresa/contact/templates/contact/contact.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Contacto | Tesis{% endblock %}
+{% block title %}Reclamaciones | Tesis{% endblock %}
 
 {% block content %}
 <section class="page-section about-heading">
@@ -13,8 +13,8 @@
         <div class="col-xl-9 col-lg-10 mx-auto">
           <div class="bg-faded rounded p-5">
             <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">Envíanos tus dudas</span>
-              <span class="section-heading-lower">Contacto</span>
+              <span class="section-heading-upper">Envíanos tus reclamaciones o tus sugerencias para mejorar tu experiencia.</span>
+              <span class="section-heading-lower">Reclama</span>
             </h2>
             <!-- Formulario de contacto -->
           
