--- a/webempresa/core/templates/core/store.html
+++ b/webempresa/core/templates/core/store.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Visítanos | Tesis{% endblock %}
+{% block title %}Contacto | Tesis{% endblock %}
 
 {% block content %}
 <section class="page-section cta">
@@ -37,6 +37,10 @@
           <p class="mb-0">
             <small><em>Llámanos y pregunta</em></small>
             <br>712946464
+          </p>
+          <p class="mb-0">
+            <small><em>O escríbenos al correo:</em></small>
+            <br>tesisclub@gmail.com
           </p>
         </div>
       </div>
