--- a/webempresa/core/templates/core/base.html
+++ b/webempresa/core/templates/core/base.html
@@ -51,7 +51,7 @@
                         <a class="nav-link text-uppercase text-expanded" href="{% url 'store' %}">Contacto</a>
                     </li>
                     <li class="nav-item px-lg-4 {% if request.path == '/contact/' %}active{% endif %}">
-                        <a class="nav-link text-uppercase text-expanded" href="{% url 'contact' %}">Reclamaciones</a>
+                        <a class="nav-link text-uppercase text-expanded" href="{% url 'contact' %}">Entradas</a>
                     </li>
                     <li class="nav-item px-lg-4 {% if request.path|slice:":6" == '/blog/' %}active{% endif %}">
                         <a class="nav-link text-uppercase text-expanded" href="{% url 'blog' %}">Blog</a>
